@anmolmsg: prettyfying clustering

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="{% static 'base/base.css' %}">
-
+    <link rel="stylesheet" href="{% static 'recsys/user_clustering.css' %}">
 
     </head>
 <body class="cikgu_background">
@@ -112,6 +112,7 @@
 
     {% block content %}
     {% endblock %}
+    
 </body>
 
 <footer class="container">
