--- a/templates/report.html
+++ b/templates/report.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-md-4">
-            {{ description }}
+            <p>{{ description|safe }}</p>
         </div>
     </div>
 </div>
