Updated report expert page

--- a/templates/report.html
+++ b/templates/report.html
@@ -16,6 +16,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
+            <h3 class="mb-4">Competencies</h3>
             {% for id, value in metrics.items %}
             <div class="d-flex flex-row justify-content-start align-items-start">
                 <div class="p-2">
@@ -36,6 +37,7 @@
         </div>
 
         <div class="col-md-8">
+            <h3 class="mb-4">Feedback</h3>
             <p>{{ description|safe }}</p>
         </div>
     </div>
