--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 {% load static %}
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon_io/favicon.ico' %}"/>
 
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
