--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,13 @@
             <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
 
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
+                    <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
                 </li>
 
                 {% if user.is_superuser %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="recsysMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle {% if request.resolver_match.app_name == 'recsys' %}active{% endif %}" href="#" id="recsysMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Recommendation System
                     </a>
                     <div class="dropdown-menu" aria-labelledby="recsysMenu">
@@ -53,7 +53,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="reportMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle {% if request.resolver_match.app_name == 'report' %}active{% endif %}" href="#" id="reportMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Report Generation
                     </a>
                     <div class="dropdown-menu" aria-labelledby="reportMenu">
