--- a/templates/report_expert.html
+++ b/templates/report_expert.html
@@ -57,8 +57,8 @@
                 <p><b>Human Approved:</b> {{ feedback_obj.human_approved }}</p>
                 
                 <div class="row">
-                    <button type="button" class="btn btn-light ml-3">Edit</button>
-                    <button type="button" class="btn btn-success ml-2 ">Approve</button>
+                    <a role="button" class="btn btn-light ml-3" href="{% url 'report:update_feedback' feedback_obj.id %}">Edit</a>
+                    <a role="button" class="btn btn-success ml-2 ">Approve</a>
                 </div>
             </div>
         </div>
