Added bootstrap5 and used it to render tooltip. TODO: shorten the length of the texts in tooltips for better readability

--- a/templates/report_expert.html
+++ b/templates/report_expert.html
@@ -6,6 +6,12 @@
 {% load report_extras %}
 {% load static %}
 
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+<link rel="stylesheet" href="{% static 'css/user_report.css' %}">
+
 <main role="main">
 
     <div class="jumbotron">
@@ -35,7 +41,7 @@
                 {% for id, value in metrics.items %}
                 <div class="d-flex flex-row justify-content-start align-items-start">
                     <div class="p-2">
-                        <img src="{% static value.icon_url %}" alt="icon for {{value.name}}" width="50" height="50" title="{{value.tooltip}}">
+                        <img src="{% static value.icon_url %}" alt="icon for {{value.name}}" width="50" height="50" data-toggle="tooltip" data-placement="right" data-html="true" title="{{value.tooltip}}">
                     </div>
     
                     <div class="p-2" style="flex-grow: 1;">
@@ -109,4 +115,11 @@
         </div>
         {% else %}{% endif %}
     </div>
+
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip({ html: true });
+    });
+</script>
+
 {% endblock %}
