--- a/templates/report.html
+++ b/templates/report.html
@@ -4,6 +4,9 @@
 {% block title %} CikguHub - Report {% endblock %}
 
 {% block content %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 <link rel="stylesheet" href="{% static 'css/user_report.css' %}">
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -33,7 +36,7 @@
             {% for id, value in metrics.items %}
             <div class="d-flex flex-row justify-content-start align-items-start">
                 <div class="p-2">
-                    <img src="{% static value.icon_url %}" alt="icon for {{value.name}}" width="50" height="50" title="{{value.tooltip}}">
+                    <img src="{% static value.icon_url %}" alt="icon for {{value.name}}" width="50" height="50" data-toggle="tooltip" data-placement="top" title="{{value.tooltip}}"> 
                 </div>
 
                 <div class="p-2" style="flex-grow: 1;">
@@ -56,6 +59,12 @@
     </div>
     <a class="button" href="{% url 'recsys:user_recs' %}">Join a class to improve skills!</a>
 </div>
+
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip({ html: true, placement: 'top' });
+    });
+</script>
 
 
 {% endblock %}
