--- a/templates/report.html
+++ b/templates/report.html
@@ -62,7 +62,7 @@
 
 <script>
     $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip({ html: true, placement: 'top' });
+        $('[data-toggle="tooltip"]').tooltip({ html: true, trigger: 'click' });
     });
 </script>
 
