Fixed conflicts with bootstrap and metric definitions

--- a/templates/report.html
+++ b/templates/report.html
@@ -59,7 +59,7 @@
 
 <script>
     $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip({ html: true, trigger: 'click' });
+        $('[data-toggle="tooltip"]').tooltip({ html: true });
     });
 </script>
 
