--- a/templates/user_clustering.html
+++ b/templates/user_clustering.html
@@ -47,54 +47,54 @@
           <div class = "col-6"> 
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="experience">Years of Experience
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "experience" in features %}checked{% endif %} value="experience">Years of Experience
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="teaching_level">School Level
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "teaching_level" in features %}checked{% endif %} value="teaching_level">School Level
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="teaching">Teaching Interest
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "teaching" in features %}checked{% endif %} value="teaching">Teaching Interest
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="coaching">Coaching Interest
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "coaching" in features %}checked{% endif %} value="coaching">Coaching Interest
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="leadership">Leadership Interest
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "leadership" in features %}checked{% endif %} value="leadership">Leadership Interest
               </label>
             </div>
           </div>
           <div class = "col-6"> 
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="digital">Digital Interest
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "digital" in features %}checked{% endif %} value="digital">Digital Interest
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="multimedia">Multimedia Interest
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "multimedia" in features %}checked{% endif %} value="multimedia">Multimedia Interest
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="roles_T">Teacher Role
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "roles_T" in features %}checked{% endif %} value="roles_T">Teacher Role
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="roles_P">Panel Head Role
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "roles_P" in features %}checked{% endif %} value="roles_P">Panel Head Role
               </label>
             </div>
             <div class="form-check">
               <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="roles_O">Officer Role
+                <input type="checkbox" class="form-check-input" name="feature_select" {% if "roles_O" in features %}checked{% endif %} value="roles_O">Officer Role
               </label>
             </div>
           </div>
