Fix responsive on User Report page

--- a/templates/report.html
+++ b/templates/report.html
@@ -28,7 +28,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-12 col-lg-4">
             <h3 class="mb-4">Competencies</h3>
             {% for id, value in metrics.items %}
             <div class="d-flex flex-row justify-content-start align-items-start">
@@ -49,7 +49,7 @@
             {% endfor %}
         </div>
 
-        <div class="col-md-8">
+        <div class="col-sm-12 col-lg-8">
             <h3 class="mb-4">Feedback</h3>
             <p>{{ description|safe }}</p>
         </div>
