Fix accessibilty on user report page

--- a/templates/report.html
+++ b/templates/report.html
@@ -39,7 +39,7 @@
                 <div class="p-2" style="flex-grow: 1;">
                     <div class="input-group">
                         <input type="range" class="form-control-range" id="planner" min="0" max="100"
-                            value="{{value.value}}" disabled>
+                            value="{{value.value}}" disabled aria-label="Competency score slider for {{value.name}}">
                         <p>{{ value.value }}</p>
                     </div>
                 </div>
