--- a/templates/recs.html
+++ b/templates/recs.html
@@ -7,7 +7,7 @@
 <main role="main">
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron bg-transparent">
         <div class="container">
             <h1 class="display-3">Recommended Activity</h1>
             
