--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -6,15 +6,27 @@
 {% load crispy_forms_tags %}
 
 <!--Login--> 
-<div class="container py-5">
+<div class="container">
     <br>
-    <h1>Login</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ login_form|crispy }}
-        <button class="btn btn-primary" type="submit">Login</button>
-    </form>
-    <p class="text-center">Don't have an account? <a href="{% url 'main:register' %}">Create an account</a>.</p>
+        <div class="row">
+            <div class="jumbotron bg-transparent col-sm-12 col-md-9 col-lg-9">
+                <h1>Cikguhub</h1>
+                <p class="lead">Welcome to CikguHub, your one stop center to Learn, Connect and Grow.
+                As a CikguHub member, you get access to all our courses, tools, and partner privileges.</p>
+            </div>
+            <div class="card col-sm-12 col-md-3 col-lg-3 ml-auto">
+                <div class="card-body"></div>
+                    <form method="POST" class="text-left">
+                    {% csrf_token %}
+                    {{ login_form|crispy }}
+                    <div class="justify-content-center align-items-center">
+                        <button class="btn btn-primary" type="submit">Log In</button>
+                        <hr>    
+                        <a class="btn btn-success" href="{% url 'main:register' %}">Create an account</a>
+                    </div>
+                    </form>
+            </div>
+        </div>  
 </div>
 
 {% endblock %}
